# CG

./: .gitignore  CMakeLists.txt
include/CG/: Camera.h  GLSLProgram.h  GLTools.h  GeometryUtil.h  MeshData.h  MeshGLInfo.h  OBJFile.h  Object.h  Scene.h  ShaderManager.h  VertexArrayObject.h  Window.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shader/: shaded.vert  simple.frag
src/: CMakeLists.txt  GLSLProgram.cpp  GeometryUtil.cpp  MeshGLInfo.cpp  OBJFile.cpp  Object.cpp  Scene.cpp  ShaderManager.cpp  VertexArrayObject.cpp  Window.cpp  main.cpp
